# space

./: .gitignore  CHANGELOG.md  README.md  build.sh  cursor-agent.js  deploy.sh  git-push-runner.sh  requirements.txt  run-create-wizard-agent.sh  run-init-agent.sh  space-cli.js  workspace-info-runner.sh
.cursor/: agent-protocol.md  ecosystem.json  event-bus.js  state.json  workspace-engine-spec.md  workspace-engine.js  workspace.json  worktrees.json
.cursor/agents/: build-agent.json  create-bdd-agent.md  create-chrome-extension-agent.md  create-crud-agent.md  create-ddd-agent.md  create-docker-agent.md  create-docker-test-agent.md  create-event-agent.md  create-feature-agent.md  create-gui-desktop-pyside6-agent.md  create-gui-mobile-kotlin-agent.md  create-gui-web-next-agent.md  create-mvc-agent.md  create-mvc-controller-agent.md  create-mvc-model-agent.md  create-mvc-view-agent.md  create-nginx-agent.md  create-openapi-schema-agent.md  create-orm-agent.md  create-plan-agent.md  create-schema-agent.md  create-tdd-agent.md  create-ui-ci-agent.md  create-ui-test-docker-agent.md  create-ui-test-runner-agent.md  create-ui-testing-agent.md  create-view-agent.md  create-wizard-agent.json  (+14 more)
app/: CMakeLists.txt  README.md  build.sh  main.cpp
app/views/: background_3d_widget.cpp  background_3d_widget.h  fancy_main_window.cpp  fancy_main_window.h  fancy_main_window.ui  loader_widget.cpp  loader_widget.h
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
src/: main.py
tests/: test-basic.js
vscode-extension/: README.md  extension.js  package.json
(+147 files in other folders)
